<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neato_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="loy.vanbeek@gmail.com">loy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joy</depend>
  <depend>neato_ros2_python</depend>
  <depend>neato_description</depend>
  <depend>slam_toolbox</depend>
  <depend>teleop_twist_joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
